# launch_config_validator

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: unittests.yml
launch_config_validator/: validate_launch_config.py
launch_config_validator/schemas/: yaml_config.json  yaml_launch.json
test/: __init__.py  coverage_test.py  test_example_validation.py  test_validator_unit.py
test/examples/correct/config/: nav2.yaml  valid_params.yaml
test/examples/correct/launch/: allowed_substitutions.launch.yaml  composable_node_nav2.launch.yaml  composable_node_wd_processing.launch.yaml  include_valid.launch.yaml  nav2.launch.yaml  valid.launch.yaml
test/examples/incorrect/config/: missing_ros_parameters.yaml  nav2.yaml  nav2_missing_ros_parameters.yaml
test/examples/incorrect/launch/: composable_missing_plugin.launch.yaml  config_missing_ros_params.launch.yaml  load_composable_missing_target.launch.yaml  missing_exec.launch.yaml  missing_include_file.launch.yaml  missing_pkg.launch.yaml  node_container_missing_exec.launch.yaml  unknown_substitution.launch.yaml
