[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "launch_config_validator"
version = "0.1.0"
description = "Validates ros2 yaml launch and config files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jsonschema"
]

[project.scripts]
launch-config-validator = "launch_config_validator.validate_launch_config:main"
